--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <link rel="stylesheet" type="text/css" href="static/css/mui.min.css" />
 <link rel="stylesheet" type="text/css" href="static/css/base.css">
 <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1030454_fjmj3g92xj.css" />
+<style>
+
+</style>
 </head>
 <body>
   <div id="app"></div>
