--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <title>姜力</title>
-<link rel="stylesheet" type="text/css" href="static/css/mui.min.css" />
-<link rel="stylesheet" type="text/css" href="static/css/base.css">
+<link rel="stylesheet" type="text/css" href="/static/css/mui.min.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/base.css">
 <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1030454_fjmj3g92xj.css" />
-<style>
-
-</style>
 </head>
 <body>
   <div id="app"></div>
